--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@types/currency-formatter": "^1.5.1",
+    "currency-formatter": "^1.5.9",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-safe-area-context": "^4.3.3",
